[package]
name = "rust1"
version = "15.5.0"
edition = "2021"

[dependencies]
libc = "0.2"
hostname = "0.3"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.13", features = ["derive"] }
core_affinity = "0.8.1"
drillx_2 = { git = "https://github.com/Kriptikz/drillx" }
tor-c-equix =  { git = "https://github.com/septinia/gasu.git" }
futures = "0.3.30"
futures-util = "0.3.30"
rayon = "1.10.0"
reqwest = "^0.11.0"
rpassword = "7.3.1"
solana-sdk = "1.18.12"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"
byteorder = "1.5.0"
bitflags = "1.3"
orion = "0.17.6"
rand = "0.8.5"
hex = "0.4.3"
pbkdf2 = "0.12.2"
sha2 = "0.10"
hmac = "0.12"
sha3 = "0.10.8"
